--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test-win": "SET NODE_ENV=test&& jest --watch",
     "heroku-postbuild": "next build",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "testcafe": "testcafe chrome tests/"
   },
   "author": "",
   "license": "ISC",
@@ -60,12 +61,8 @@
     "graphql-tools": "^4.0.0",
     "jest": "^23.6.0",
     "jest-transform-graphql": "^2.1.0",
-    "prettier": "^1.19.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "wesbos"
-    ]
+    "prettier": "^1.19.1",
+    "testcafe": "^1.8.1"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
@@ -135,5 +132,10 @@
         ]
       }
     }
+  },
+  "eslintConfig": {
+    "extends": [
+      "wesbos"
+    ]
   }
 }
