--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "next": "^9.2.1",
     "next-with-apollo": "^5.0.0",
     "nprogress": "^0.2.0",
+    "plotly.js": "^1.52.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
     "react-dom": "^16.5.2",
+    "react-plotly.js": "^2.4.0",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
     "styled-components": "^4.4.0",
