--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -29,4 +29,5 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Publish Date', name: 'date', widget: 'datetime', required: true }
       - { label: 'Featured Image', name: 'thumbnail', widget: 'image', required: true }
-      - { label: 'Body', name: 'body', widget: 'markdown', required: true }
+      - { label: 'Text', name: 'text', widget: 'markdown', required: true }
+      - { label: 'Link', name: 'link', widget: 'string', required: true }
