--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql-tag": "^2.10.3",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.24.0",
     "next": "^9.2.1",
     "next-with-apollo": "^5.0.0",
     "nprogress": "^0.2.0",
