--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-with-apollo": "^5.0.0",
     "nprogress": "^0.2.0",
     "plotly.js": "^1.52.3",
+    "project-name-generator": "^2.1.7",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-adopt": "^0.6.0",
@@ -44,6 +45,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
     "styled-components": "^4.4.0",
+    "uniqid": "^5.2.0",
     "waait": "^1.0.2"
   },
   "devDependencies": {
