--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "file-saver": "^2.0.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.3",
     "lodash.clonedeep": "^4.5.0",
@@ -41,6 +42,7 @@
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
     "react-dom": "^16.5.2",
+    "react-papaparse": "^3.0.1",
     "react-plotly.js": "^2.4.0",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
