--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "testcafe": "testcafe chrome tests/",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "start:lambda": "netlify-lambda serve functions",
+    "build:lambda": "netlify-lambda build functions"
   },
   "author": "",
   "license": "ISC",
@@ -70,8 +72,17 @@
     "graphql-tools": "^4.0.0",
     "jest": "^23.6.0",
     "jest-transform-graphql": "^2.1.0",
+    "netlify-lambda": "^1.6.3",
     "prettier": "^1.19.1",
     "testcafe": "^1.8.1"
+  },
+  "proxy": {
+    "/.netlify/functions": {
+      "target": "http://localhost:9000",
+      "pathRewrite": {
+        "^/\\.netlify/functions": ""
+      }
+    }
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
