--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "file-saver": "^2.0.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.3",
+    "hash.js": "^1.1.7",
+    "lab.js": "^20.0.1",
+    "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
@@ -48,8 +51,11 @@
     "react-dom": "^16.5.2",
     "react-papaparse": "^3.0.1",
     "react-plotly.js": "^2.4.0",
+    "react-script-tag": "^1.1.2",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
+    "serialize-javascript": "^3.1.0",
+    "slugify": "^1.4.0",
     "styled-components": "^4.4.0",
     "uniqid": "^5.2.0",
     "waait": "^1.0.2"
@@ -70,8 +76,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "express": "^4.17.1",
     "frontmatter-markdown-loader": "^3.2.0",
     "graphql-tools": "^4.0.0",
+    "http-proxy-middleware": "^1.0.4",
     "jest": "^23.6.0",
     "jest-transform-graphql": "^2.1.0",
     "netlify-lambda": "^1.6.3",
