template logic update

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.3",
@@ -49,11 +50,13 @@
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
     "react-dom": "^16.5.2",
+    "react-html-parser": "^2.0.2",
     "react-papaparse": "^3.0.1",
     "react-plotly.js": "^2.4.0",
     "react-script-tag": "^1.1.2",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
+    "semantic-ui-react": "^0.88.2",
     "serialize-javascript": "^3.1.0",
     "slugify": "^1.4.0",
     "styled-components": "^4.4.0",
