--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.1.16",
-    "apollo-client": "^2.4.2",
+    "apollo-client": "^2.6.10",
     "axios": "^0.19.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^1.10.1",
-    "date-fns": "^2.0.0-alpha.7",
+    "date-fns": "^2.14.0",
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -39,19 +39,19 @@
     "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
-    "moment": "^2.24.0",
-    "next": "^9.2.1",
-    "next-with-apollo": "^5.0.0",
+    "moment": "^2.27.0",
+    "next": "^9.4.4",
+    "next-with-apollo": "^5.0.1",
     "nprogress": "^0.2.0",
-    "plotly.js": "^1.52.3",
+    "plotly.js": "^1.54.3",
     "project-name-generator": "^2.1.7",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
+    "react": "^16.13.1",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
-    "react-papaparse": "^3.0.1",
+    "react-papaparse": "^3.3.0",
     "react-plotly.js": "^2.4.0",
     "react-script-tag": "^1.1.2",
     "react-stripe-checkout": "^2.6.3",
@@ -68,27 +68,27 @@
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "casual": "^1.5.19",
-    "enzyme-to-json": "^3.3.4",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-wesbos": "0.0.19",
     "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.17.1",
-    "frontmatter-markdown-loader": "^3.2.0",
-    "graphql-tools": "^4.0.0",
+    "frontmatter-markdown-loader": "^3.6.0",
+    "graphql-tools": "^4.0.8",
     "http-proxy-middleware": "^1.0.4",
     "jest": "^23.6.0",
     "jest-transform-graphql": "^2.1.0",
     "netlify-lambda": "^1.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "testcafe": "^1.8.1"
+    "testcafe": "^1.8.6"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
