--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "apollo-boost": "^0.1.16",
     "apollo-client": "^2.6.10",
     "axios": "^0.19.2",
