--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "testcafe": "testcafe chrome tests/",
-    "export": "npm run build",
+    "export": "npm run build && next export",
     "start:lambda": "netlify-lambda serve functions",
     "build:lambda": "netlify-lambda build functions",
     "build": "npm-run-all --parallel build:**"
