--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
   to = "/study/[slug].html"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"   
+  to = "/index.html"
+  status = 200
