--- a/netlify.toml
+++ b/netlify.toml
@@ -2,13 +2,13 @@
   command = "npm run export"
   functions = "lambda" #  netlify-lambda reads this
 
-[[redirects]]
-  from = "/study/*"
-  to = "/study/[slug].html"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "/*"   
-  to = "/index.html"
-  status = 200
+# [[redirects]]
+#   from = "/study/*"
+#   to = "/study/[slug].html"
+#   status = 200
+#   force = true
+#
+# [[redirects]]
+#   from = "/*"
+#   to = "/index.html"
+#   status = 200
