--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.21",
     "react-html-parser": "^2.0.2",
     "react-papaparse": "^3.3.0",
     "react-plotly.js": "^2.4.0",
