--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "lzutf8": "^0.5.6",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-with-apollo": "^5.0.1",
