--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Update Date', name: 'date', widget: 'datetime', required: true }
-      - { label: 'Content', name: 'content', widget: 'markdown', required: true }
+      - { label: "Body", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
     files:
