--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,9 @@
   to = "/tasks/[slug].html"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/docs/*"
+  to = "/docs/[slug].html"
+  status = 200
+  force = true
