--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-saver": "^2.0.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.3",
+    "gray-matter": "^4.0.2",
     "hash.js": "^1.1.7",
     "lab.js": "^20.0.1",
     "lodash": "^4.17.15",
