--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lzutf8": "^0.5.6",
+    "marked": "^1.1.1",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-with-apollo": "^5.0.1",
