--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,30 +13,30 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Update Date', name: 'date', widget: 'datetime', required: true }
       - { label: "Body", name: "body", widget: "markdown" }
-  - name: "pages"
-    label: "Pages"
-    files:
-    - label: "Home"
-      name: "home"
-      file: "content/home.md"
-      fields:
-        - { label: "Title", name: "title", widget: "string"}
-        - { label: "Publish Date", name: "date", widget: "datetime" }
-        - { label: "Body", name: "body", widget: "markdown"}
-        - label: 'Links'
-          name: "links"
-          widget: list
-          fields:
-            - { label: "Name", name: "name", widget: "string"}
-            - { label: "Description", name: "description", widget: "text"}
-  - label: 'Lessons'
-    name: 'lessons'
-    folder: 'content/lessons'
-    create: true
-    slug: '{{year}}-{{month}}-{{day}}_{{slug}}'
-    fields:
-      - { label: 'Title', name: 'title', widget: 'string', required: true }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime', required: true }
-      - { label: 'Featured Image', name: 'thumbnail', widget: 'image', required: true }
-      - { label: 'Text', name: 'text', widget: 'markdown', required: true }
-      - { label: 'Link', name: 'link', widget: 'string', required: true }
+  # - name: "pages"
+  #   label: "Pages"
+  #   files:
+  #   - label: "Home"
+  #     name: "home"
+  #     file: "content/home.md"
+  #     fields:
+  #       - { label: "Title", name: "title", widget: "string"}
+  #       - { label: "Publish Date", name: "date", widget: "datetime" }
+  #       - { label: "Body", name: "body", widget: "markdown"}
+  #       - label: 'Links'
+  #         name: "links"
+  #         widget: list
+  #         fields:
+  #           - { label: "Name", name: "name", widget: "string"}
+  #           - { label: "Description", name: "description", widget: "text"}
+  # - label: 'Lessons'
+  #   name: 'lessons'
+  #   folder: 'content/lessons'
+  #   create: true
+  #   slug: '{{year}}-{{month}}-{{day}}_{{slug}}'
+  #   fields:
+  #     - { label: 'Title', name: 'title', widget: 'string', required: true }
+  #     - { label: 'Publish Date', name: 'date', widget: 'datetime', required: true }
+  #     - { label: 'Featured Image', name: 'thumbnail', widget: 'image', required: true }
+  #     - { label: 'Text', name: 'text', widget: 'markdown', required: true }
+  #     - { label: 'Link', name: 'link', widget: 'string', required: true }
