--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "eslint . --fix",
     "testcafe": "testcafe chrome tests/",
     "export": "npm run build && next export",
-    "start:lambda": "netlify-lambda serve functions",
+    "start:lambda": "NODE_ENV=development netlify-lambda serve functions",
     "build:lambda": "netlify-lambda build functions",
     "build": "npm-run-all --parallel build:**"
   },
