--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "friendly-words": "^1.1.10",
-    "graphql": "^14.0.2",
+    "graphql": "^14.7.0",
+    "graphql-request": "^3.3.0",
     "graphql-tag": "^2.10.3",
     "gray-matter": "^4.0.2",
     "hash.js": "^1.1.7",
