--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@nivo/core": "^0.67.0",
+    "@nivo/scatterplot": "^0.67.0",
     "@react-pdf/renderer": "^2.0.0-beta.6",
     "@react-pdf/styled-components": "^1.4.0",
     "apollo-boost": "^0.1.16",
