--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-with-apollo": "^5.0.1",
+    "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "plotly.js": "^1.54.3",
     "project-name-generator": "^2.1.7",
