--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-date-picker": "^8.0.6",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
     "react-html-parser": "^2.0.2",
