--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash.debounce": "^4.0.8",
     "lzutf8": "^0.5.6",
     "marked": "^1.1.1",
+    "mathjs": "^9.0.0",
     "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-with-apollo": "^5.0.1",
@@ -71,12 +72,16 @@
     "react-smooth-dnd": "^0.11.1",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
+    "react-vega": "^7.4.2",
     "semantic-ui-react": "^0.88.2",
     "serialize-javascript": "^3.1.0",
+    "simple-statistics": "^7.4.0",
     "slugify": "^1.4.0",
     "styled-components": "^4.4.0",
     "uniqid": "^5.2.0",
     "uuid": "^8.2.0",
+    "vega": "^5.19.1",
+    "vega-lite": "^4.17.0",
     "waait": "^1.0.2"
   },
   "devDependencies": {
