--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "graphql-tag": "^2.10.3",
     "gray-matter": "^4.0.2",
     "hash.js": "^1.1.7",
+    "jodit-react": "^1.0.71",
     "lab.js": "^20.0.1",
     "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
