--- a/package.json
+++ b/package.json
@@ -59,19 +59,20 @@
     "plotly.js": "^1.54.3",
     "project-name-generator": "^2.1.7",
     "prop-types": "^15.6.2",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-addons-pure-render-mixin": "^15.6.3",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-date-picker": "^8.0.6",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-google-login": "^5.1.21",
     "react-html-parser": "^2.0.2",
     "react-json-editor-ajrm": "^2.5.13",
     "react-papaparse": "^3.3.0",
     "react-plotly.js": "^2.4.0",
     "react-script-tag": "^1.1.2",
+    "react-sketch": "^0.5.1",
     "react-smooth-dnd": "^0.11.1",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
