--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.1.1",
+    "@apollo/client": "^3.5.8",
     "@nivo/core": "^0.67.0",
     "@nivo/scatterplot": "^0.67.0",
     "@react-pdf/renderer": "^2.0.0-beta.6",
@@ -42,9 +42,9 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "friendly-words": "^1.1.10",
-    "graphql": "^14.7.0",
+    "graphql": "^16.2.0",
     "graphql-request": "^3.3.0",
-    "graphql-tag": "^2.10.3",
+    "graphql-tag": "^2.12.6",
     "gray-matter": "^4.0.2",
     "hash.js": "^1.1.7",
     "jodit-react": "^1.0.71",
@@ -85,6 +85,7 @@
     "serialize-javascript": "^3.1.0",
     "simple-statistics": "^7.4.0",
     "slugify": "^1.4.0",
+    "streamsaver": "^2.0.5",
     "styled-components": "^4.4.0",
     "uniqid": "^5.2.0",
     "uuid": "^8.2.0",
