--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "exceljs": "^4.3.0",
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "friendly-words": "^1.1.10",
