search studies overview

--- a/netlify.toml
+++ b/netlify.toml
@@ -61,3 +61,9 @@
   to = "/do/task.html"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/dashboard/overview/*"
+  to = "/dashboard/overview/[item]/[page].html"
+  status = 200
+  force = true
