irb in dashboard

--- a/netlify.toml
+++ b/netlify.toml
@@ -67,3 +67,9 @@
   to = "/dashboard/overview/[item]/[page].html"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/dashboard/irb"
+  to = "/dashboard/irb.html"
+  status = 200
+  force = true
