extend collaborator query

--- a/netlify.toml
+++ b/netlify.toml
@@ -73,3 +73,15 @@
   to = "/dashboard/irb.html"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/dashboard/irb/view"
+  to = "/dashboard/irb/view.html"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/dashboard/irb/edit"
+  to = "/dashboard/irb/edit.html"
+  status = 200
+  force = true
