--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@apollo/client": "^3.5.8",
     "@nivo/core": "^0.67.0",
     "@nivo/scatterplot": "^0.67.0",
-    "@react-pdf/renderer": "^2.0.0-beta.6",
+    "@react-pdf/renderer": "^2.1.1",
     "@react-pdf/styled-components": "^1.4.0",
     "@socialgouv/matomo-next": "^1.2.1",
     "apollo-boost": "^0.1.16",
@@ -34,7 +34,7 @@
     "apollo-link-state": "^0.4.2",
     "axios": "^0.19.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-plugin-styled-components": "^1.10.1",
+    "babel-plugin-styled-components": "^2.0.7",
     "date-fns": "^2.14.0",
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
@@ -119,7 +119,8 @@
     "netlify-lambda": "^1.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "testcafe": "^1.8.6"
+    "testcafe": "^1.8.6",
+    "webpack": "^5.72.0"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
