--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@nivo/core": "^0.67.0",
-    "@nivo/scatterplot": "^0.67.0",
+    "@nivo/core": "^0.79.0",
+    "@nivo/scatterplot": "^0.79.1",
     "@react-pdf/renderer": "^2.1.1",
     "@react-pdf/styled-components": "^1.4.0",
     "@socialgouv/matomo-next": "^1.2.1",
@@ -32,7 +32,7 @@
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
     "apollo-link-state": "^0.4.2",
-    "axios": "^0.19.2",
+    "axios": "^0.26.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^2.0.7",
     "date-fns": "^2.14.0",
@@ -54,7 +54,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lzutf8": "^0.5.6",
-    "marked": "^1.1.1",
+    "marked": "^4.0.14",
     "mathjs": "^9.0.0",
     "moment": "^2.27.0",
     "next": "^12.1.0",
@@ -86,17 +86,17 @@
     "serialize-javascript": "^3.1.0",
     "simple-statistics": "^7.4.0",
     "slugify": "^1.4.0",
+    "starboard-wrap": "^0.4.1",
     "streamsaver": "^2.0.5",
     "styled-components": "^4.4.0",
     "uniqid": "^5.2.0",
     "uuid": "^8.2.0",
     "vega": "^5.19.1",
-    "vega-lite": "^4.17.0",
     "waait": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "casual": "^1.5.19",
     "enzyme-to-json": "^3.5.0",
@@ -114,7 +114,7 @@
     "frontmatter-markdown-loader": "^3.6.0",
     "graphql-tools": "^4.0.8",
     "http-proxy-middleware": "^1.0.4",
-    "jest": "^23.6.0",
+    "jest": "^27.5.1",
     "jest-transform-graphql": "^2.1.0",
     "netlify-lambda": "^1.6.3",
     "npm-run-all": "^4.1.5",
