installed avatar package

--- a/package.json
+++ b/package.json
@@ -63,10 +63,11 @@
     "nprogress": "^0.2.0",
     "plotly.js": "^1.54.3",
     "project-name-generator": "^2.1.7",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-addons-pure-render-mixin": "^15.6.3",
     "react-adopt": "^0.6.0",
+    "react-avatar": "^4.1.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-date-picker": "^8.0.6",
     "react-dom": "^16.14.0",
