--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@nivo/core": "^0.79.0",
     "@nivo/scatterplot": "^0.79.1",
+    "@projectstorm/react-canvas-core": "^6.7.4",
+    "@projectstorm/react-diagrams": "^6.7.4",
+    "@projectstorm/react-diagrams-core": "^6.7.4",
     "@react-pdf/renderer": "^2.1.1",
     "@react-pdf/styled-components": "^1.4.0",
     "@socialgouv/matomo-next": "^1.2.1",
@@ -35,6 +40,8 @@
     "axios": "^0.26.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "closest": "^0.0.1",
+    "dagre": "^0.8.5",
     "date-fns": "^2.14.0",
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
@@ -50,7 +57,7 @@
     "hash.js": "^1.1.7",
     "jodit-react": "^1.0.71",
     "lab.js": "^20.0.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lzutf8": "^0.5.6",
@@ -61,16 +68,18 @@
     "next-with-apollo": "^5.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.11",
     "plotly.js": "^1.54.3",
     "project-name-generator": "^2.1.7",
     "prop-types": "^15.8.1",
-    "react": "^16.14.0",
+    "react": "^18.2.0",
     "react-addons-pure-render-mixin": "^15.6.3",
     "react-adopt": "^0.6.0",
     "react-avatar": "^4.1.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-date-picker": "^8.0.6",
-    "react-dom": "^16.14.0",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-html-parser": "^2.0.2",
     "react-json-editor-ajrm": "^2.5.13",
@@ -83,6 +92,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
     "react-vega": "^7.4.2",
+    "resize-observer-polyfill": "^1.5.1",
     "semantic-ui-react": "^0.88.2",
     "serialize-javascript": "^3.1.0",
     "simple-statistics": "^7.4.0",
