--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "next-with-apollo": "^5.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "osc-js": "^2.3.2",
     "pathfinding": "^0.4.18",
     "paths-js": "^0.4.11",
     "plotly.js": "^1.54.3",
