--- a/netlify.toml
+++ b/netlify.toml
@@ -63,7 +63,7 @@
   force = true
 
 [[redirects]]
-  from = "/dashboard/overview/*"
+  from = "/dashboard/overview/*/*"
   to = "/dashboard/overview/[item]/[page].html"
   status = 200
   force = true
