--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-sketch": "^0.5.1",
     "react-smooth-dnd": "^0.11.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-table": "^7.8.0",
     "react-transition-group": "^2.5.0",
     "react-vega": "^7.4.2",
     "resize-observer-polyfill": "^1.5.1",
