--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-papaparse": "^3.3.0",
     "react-plotly.js": "^2.4.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-script-tag": "^1.1.2",
     "react-sketch": "^0.5.1",
     "react-smooth-dnd": "^0.11.1",
