--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.9.3",
     "@projectstorm/react-canvas-core": "^6.7.4",
     "@projectstorm/react-diagrams": "^6.7.4",
@@ -65,7 +66,7 @@
     "next-with-apollo": "^5.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "osc-js": "^2.3.2",
+    "osc-js": "^2.4.0",
     "pathfinding": "^0.4.18",
     "paths-js": "^0.4.11",
     "plotly.js": "^1.44.4",
@@ -103,6 +104,7 @@
     "uniqid": "^5.2.0",
     "uuid": "^8.2.0",
     "vega": "^5.19.1",
+    "vega-lite": "^5.9.3",
     "waait": "^1.0.2"
   },
   "devDependencies": {
